# skill-cert

./: .code-walkthrough-result.json  .gitignore  .skill-cert-ci-history.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INDUSTRY_SURVEY.md  INTEGRATION_ASSESSMENT.md  LICENSE  MANIFEST.md  README.md  README.zh.md  SETUP.md  SKILL.md  architecture-report.sarif.json  architecture.yaml  archy.yaml  package-lock.json  package.json  pyproject.toml  setup.cfg  specification.yaml  tools.md
.sprint-state/: sprint-2-state.yaml  sprint-state.json  sprint-state.yaml
adapters/: AGENTS.md  anthropic_compat.py  base.py  factory.py  openai_compat.py  pricing.py
configs/: user_profiles.yaml
docs/: AGENTS.md  CHANGELOG.md  EVALUATION_REVIEW_2026.md  TOOLCHAIN_LANDSCAPE_2026.md  audit-report.md  baseline-analysis.md  gate-validation-guide.md  retrospective-v0.13.1.md  skill-design-template.md  specification-v2.yaml
engine/: AGENTS.md  __init__.py  adversarial.py  analyzer.py  calibration.py  classifier.py  config.py  constants.py  deadline.py  dialogue_evaluator.py  dialogue_runner.py  drift.py  envelope.py  goal_change.py  golden_dataset.py  gotchas_analyzer.py  gotchas_flywheel.py  grader.py  hooks_detector.py  integrations.py  maintainability.py  metrics.py  multi_skill.py  observability.py  progressive_disclosure.py  reliability.py  replay.py  report_models.py  reporter.py  runner.py  security_probes.py  simulator.py  skills_bench.py  stability.py  stress_test.py  structure_quality.py  testgen.py  token_ledger.py  trace_models.py  trajectory_evaluator.py  (+1 more)
examples/: sample_session.jsonl
githooks/: AGENTS.md  TOOL-INSTALLATION-GUIDE.md  install-pre-commit.sh  install-pre-push.sh  install.sh  pre-commit  pre-push
improvements/: README.md  delphi-review-improvements.md  skill-cert-issues.md
prompts/: judge-output.md  judge-trigger.md  judge-workflow.md  judge.md  judge_dialogue.md  test-review.md  testgen.meta.md
references/: anti-patterns.md  evaluation-flow.md  examples.md  metrics.md  output-format.md  setup.md
schemas/: report.schema.json  (+1 more)
skill_cert/: cli.py  (+1 more)
(+186 files in other folders)
