[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-cert"
version = "0.12.0"
description = "通用 AI Skill 评测引擎 — 自解析、自生成测试、自执行、自评估"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Skill-Cert Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "aiolimiter>=1.1",
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
    "requests>=2.25",
]

[tool.setuptools.packages.find]
include = ["skill_cert*", "engine*", "adapters*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]
otlp = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.scripts]
skill-cert = "skill_cert.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/test_cli_pipeline.py" = ["N806"]
# test_maintainability.py contains intentionally long SKILL.md strings for testing readability scoring
"tests/test_maintainability.py" = ["E501"]
# Test files often contain long JSON fixtures, inline strings, and BDD comments.
# Engine and adapter source code remains strictly enforced.
"tests/*" = ["E501"]
